# hypatia

./: .conflow.yaml  .finishingbot.toml  .gitattributes  .gitignore  .gitmodules  .hypatia-baseline.json  .hypatia-exemptions.md  .hypatia-ignore  .semgrepignore  .tool-versions  .trusted-base-ignore  0-AI-MANIFEST.a2ml  A2ML-K9-INTEGRATION.md  ACTION-ITEMS.adoc  AFFIRMATION.adoc  AGENTIC.scm  AI.djot  CHANGELOG.adoc  CHANGELOG.md  CII-ENFORCEMENT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DESIGN-NARRATIVE.md  DOGFOODING-SESSION-2026-01-25.md  ECOSYSTEM.scm  ELIXIR-SCANNER-COMPLETE.md  EXPLAINME.adoc  GOVERNANCE.adoc  Justfile  KNOWN-ISSUES.adoc  LICENSE  META.scm  NEUROSYM.scm  PLAYBOOK.scm  PROOF-NEEDS.md  PROOFS-GAP.md  QUICKSTART-USER.adoc  READINESS.md  (+39 more)
.claude/: CLAUDE.md
adapters/: Cargo.toml  README.adoc
adapters/src/: bitbucket.rs  codeberg.rs  error.rs  forge.rs  github.rs  gitlab.rs  lib.rs  main.rs  radicle.rs  service.rs  sourcehut.rs
adapters/tests/: adapter_tests.rs  seam_tests.rs
cli/: Cargo.toml  README.adoc  build.rs
cli/man/: hyper-batch.1  hyper-completions.1  hyper-deposit.1  hyper-exit-codes.7  hyper-fleet.1  hyper-hooks.1  hyper-scan.1  hyper-search.1  hyper-withdraw.1  hyper.1
cli/src/: app_state.rs  completions.rs  config.rs  exit_codes.rs  main.rs  output.rs
cli/src/commands/: batch.rs  deposit.rs  fleet.rs  hooks.rs  mod.rs  scan.rs  search.rs  withdraw.rs
clients/rust/hypatia-client/: .cargo-mutants.toml  Cargo.toml
data/: Cargo.toml
data/security-fixes/: enable-branch-protection.jl  fix-permissions.jl  standardize-licenses.jl
data/src/: arangodb.rs  arangodb.rs.removed  cache.rs  dragonfly.rs  error.rs  lib.rs  models.rs  verisim.rs  verisimdb.rs
data/verisim/annealing-states/: recipe-remove-believe-me.json  recipe-shell-quote-vars.json  recipe-todo-to-fill.json
data/verisim/dispatch/: held.jsonl  pending.jsonl  scorecard-local-2026-03-29.jsonl  scorecard-target-manifest.json
data/verisim/health/: hypatia.json
data/verisim/patterns/: registry.json
data/verisim/recipes/: proven-substitutions.json  recipe-add-dependabot.json  recipe-add-elixir-ci.json  recipe-add-license-file.json  recipe-add-sast-workflow.json  recipe-add-workflow-timeout-minutes.json  recipe-atom-exhaustion.json  recipe-budget-resume-sweep.json  recipe-close-obsolete-pr.json  recipe-dynamic-apply-to-dispatch.json  recipe-elixir-ssl-verify.json  recipe-fix-command-injection.json  recipe-fix-cors-wildcard.json  recipe-fix-gitattributes-eol.json  recipe-fix-http-to-https.json  recipe-fix-pmpl-drift.json  recipe-fix-spdx-double-suffix.json  recipe-fix-spdx-license.json  recipe-fix-tmp-paths.json  recipe-panic-to-result.json  recipe-pin-dependencies.json  recipe-safe-deserialize.json  recipe-scorecard-binary-artifacts.json  recipe-scorecard-ci-tests.json  recipe-scorecard-cii-best-practices.json  recipe-scorecard-code-review.json  recipe-scorecard-contributors.json  recipe-scorecard-dependency-update.json  recipe-scorecard-fuzzing.json  recipe-scorecard-license.json  recipe-scorecard-maintained.json  recipe-scorecard-packaging.json  recipe-scorecard-pinned-deps.json  recipe-scorecard-sbom.json  recipe-scorecard-security-policy.json  recipe-scorecard-signed-releases.json  recipe-scorecard-vulnerabilities.json  recipe-scorecard-webhooks.json  recipe-unsafe-crash.json  recipe-unsafe-ffi-wrapper.json  (+1 more)
data/verisimdb/annealing-states/: recipe-heredoc-to-install.json  recipe-http-to-https.json  recipe-remove-believe-me.json  recipe-shell-quote-vars.json  recipe-tmp-to-mktemp.json  recipe-todo-to-fill.json
data/verisimdb/dispatch/: scorecard-batch-2026-03-29.jsonl  scorecard-local-2026-03-29.jsonl  scorecard-target-manifest.json
data/verisimdb/health/: hypatia.json
data/verisimdb/outcomes/: 2026-03.jsonl
data/verisimdb/patterns/: registry.json
data/verisimdb/recipes/: proven-substitutions.json  recipe-add-elixir-ci.json  recipe-add-license-file.json  recipe-add-security-policy.json  recipe-deno-least-privilege.json  recipe-eval-to-safe-exec.json  recipe-fix-command-injection.json  recipe-fix-cors-wildcard.json  recipe-fix-hardcoded-secrets.json  recipe-fix-heredoc-install.json  recipe-fix-innerHTML.json  recipe-fix-proven-substitute.json  recipe-fix-resource-leak.json  recipe-fix-sorry-lean.json  recipe-fix-spdx-license.json  recipe-fix-sql-injection.json  recipe-fix-todo-markers.json  recipe-fix-workflow-permissions.json  recipe-pin-dependencies.json  recipe-pin-github-actions.json  recipe-remove-believe-me.json  recipe-safe-deserialize.json  recipe-scorecard-branch-protection.json  recipe-scorecard-ci-tests.json  recipe-scorecard-code-review.json  recipe-scorecard-dangerous-workflow.json  recipe-scorecard-maintained.json  recipe-scorecard-sast.json  recipe-scorecard-sbom.json  recipe-scorecard-signed-releases.json  recipe-scorecard-token-permissions.json  recipe-scorecard-webhooks.json  recipe-secret-to-env.json  recipe-shell-quote-vars.json  recipe-submodule-flush.json  recipe-unbounded-loop.json  (+2 more)
fixer/: Cargo.toml  README.adoc
fixer/benches/: hypatia_bench.rs
fixer/src/: catalog.rs  fixer.rs  lib.rs  main.rs  scanner.rs  sha_pins.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_registry_operations.rs  fuzz_template_validation.rs
integration/: Cargo.toml  Containerfile.test  README.adoc  README.md  compose.test.yaml  docker-compose.test.yml  run-tests.sh
integration/fixtures/: sample-ruleset.json
integration/robot-repo-automaton/: config.yml
integration/src/: lib.rs
integration/tests/: arangodb_test.rs  ci_simulation_test.rs  fleet_test.rs  forge_test.rs  hooks_test.rs  registry_test.rs
registry/: cicd-hyper-a.cabal  hypatia.cabal
registry/rulesets/: release-readiness.json  rsr-compliance.json  rust-quality.json  security-baseline.json  workflow-hygiene.json
registry/src/: Main.hs
registry/test/: APISpec.hs  CLISpec.hs  LiquidSpec.hs  PropertySpec.hs  RegistrySpec.hs  RulesetSpec.hs  Spec.hs  VerifySpec.hs
scripts/bench-tools/: Cargo.toml
scripts/ci-tools/: Cargo.toml
tools/cii-registrar/: Cargo.toml
(+944 files in other folders)
