# SPDX-License-Identifier: AGPL-3.0-or-later
[workspace]
resolver = "2"
members = [
    "adapters",
    "data",
    "fixer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/cicd-hyper-a"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
