# SPDX-License-Identifier: PMPL-1.0-or-later
[workspace]
resolver = "2"
members = [
    "adapters",
    "cli",
    "data",
    "fixer",
    "integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/hypatia"
homepage = "https://hypatia.reposystem.dev"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
