# SPDX-License-Identifier: PLMP-1.0-or-later
[package]
name = "hypatia-adapters"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
description = "Multi-forge adapters for Hypatia CI/CD platform"
license = "PLMP-1.0-or-later"
repository = "https://github.com/hyperpolymath/hypatia"
homepage = "https://hypatia.reposystem.dev"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
url = "2.5"
base64 = "0.21"
octocrab = "0.32"  # GitHub API (uses reqwest with default TLS)
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Internal dependencies
data = { path = "../data", package = "hypatia-data" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# Note: The package name differs from directory name
[lib]
name = "adapters"
path = "src/lib.rs"

[[bin]]
name = "forge-adapter"
path = "src/main.rs"
