# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "cicd-hyper-a-data"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
description = "Data layer clients for cicd-hyper-a (ArangoDB, Dragonfly)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/cicd-hyper-a"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"

# ArangoDB
arangors = "0.5"
uclient = "0.2"

# Redis/Dragonfly
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Connection pooling
bb8 = "0.8"

# Serialization
bincode = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.23"

[features]
default = []
# Enable for integration tests with real databases
integration-tests = []
