# SPDX-License-Identifier: PLMP-1.0-or-later
[package]
name = "hypatia-data"
version = "0.1.0"
edition = "2021"
authors = ["hyperpolymath"]
description = "Data layer clients for Hypatia (ArangoDB, Dragonfly)"
license = "PLMP-1.0-or-later"
repository = "https://github.com/hyperpolymath/hypatia"
homepage = "https://hypatia.reposystem.dev"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"

# ArangoDB
arangors = "0.5"
uclient = "0.2"

# Force vendored OpenSSL for cross-compilation support
# This is required because arangors uses reqwest with native-tls
openssl = { version = "0.10", features = ["vendored"] }

# Redis/Dragonfly
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Connection pooling
bb8 = "0.8"

# Serialization
bincode = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.23"

[features]
default = []
# Enable for integration tests with real databases
integration-tests = []
