# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "hypatia-data"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Data layer clients for Hypatia (ArangoDB, Dragonfly)"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/hypatia"
homepage = "https://hypatia.reposystem.dev"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"

# ArangoDB removed — uclient 0.2 pulls hyper 0.10 (CVE-vulnerable, unmaintained).
# ArangoDB itself was 0% deployed and transitional. If needed in future, use
# arangors 0.7+ (once it drops hyper 0.10 dependency) or a direct HTTP client.

# Redis/Dragonfly
redis = { version = "1.1", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.23"

# Connection pooling
bb8 = "0.8"

# Serialization
bincode = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.27"

[features]
default = []
# Enable for integration tests with real databases
integration-tests = []
# ArangoDB removed — see comment above
