# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "hypatia-fixer"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Programmatic CI/CD workflow fixer for Hypatia"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/hypatia"
homepage = "https://hypatia.reposystem.dev"

[dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex for pattern matching
regex = "1.10"
once_cell = "1.19"

# File system
walkdir = "2.4"
glob = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "hypatia_bench"
harness = false

[[bin]]
name = "cicd-fixer"
path = "src/main.rs"

[lib]
name = "cicd_fixer"
path = "src/lib.rs"
