cabal-version:      3.0
-- SPDX-License-Identifier: AGPL-3.0-or-later
name:               cicd-hyper-a
version:            0.1.0.0
synopsis:           Type-safe CI/CD rule registry
description:        Neurosymbolic CI/CD intelligence platform.
                    Dumb rules from smart learning.
license:            AGPL-3.0-or-later
license-file:       ../LICENSE
author:             hyperpolymath
maintainer:         security@hyperpolymath.dev
category:           Development
build-type:         Simple
extra-doc-files:    ../README.adoc

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  CicdHyperA.Ruleset
                    , CicdHyperA.Verify
                    , CicdHyperA.Registry
                    , CicdHyperA.Liquid
                    , CicdHyperA.API
    build-depends:    base >=4.17 && <5
                    , text >=2.0 && <3
                    , containers >=0.6 && <1
                    , time >=1.12 && <2
                    , directory >=1.3 && <2
                    , filepath >=1.4 && <2
                    , aeson >=2.1 && <3
    hs-source-dirs:   src
    default-language: Haskell2010

executable registry
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5
                    , text >=2.0 && <3
                    , time >=1.12 && <2
                    , directory >=1.3 && <2
                    , filepath >=1.4 && <2
                    , cicd-hyper-a
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cicd-hyper-a-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    RulesetSpec
                    , VerifySpec
                    , RegistrySpec
                    , LiquidSpec
                    , APISpec
                    , CLISpec
    build-depends:    base >=4.17 && <5
                    , text >=2.0 && <3
                    , cicd-hyper-a
                    , hspec >=2.11 && <3
                    , QuickCheck >=2.14 && <3
                    , aeson >=2.1 && <3
                    , bytestring >=0.11 && <1
                    , temporary >=1.3 && <2
    hs-source-dirs:   test
    default-language: Haskell2010
