# SPDX-License-Identifier: MPL-2.0
[package]
name = "cii-registrar"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "CLI tool for registering projects with OpenSSF Best Practices Badge"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/hypatia"
keywords = ["openssf", "cii", "badge", "security", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
